--- a/src/css/style2.css
+++ b/src/css/style2.css
@@ -34,6 +34,7 @@ body
     border-radius: 300px;
     transition: border 1s;
     position: relative;
+    border: 5px solid #ffef16;
 }
 
 .profile_border:hover 
